# wavelets

./: wavelets.cabal
src/Data/: Wavelets.hs
src/Data/Wavelets/: Construction.hs  Reconstruction.hs  Scaling.hs
test/Data/: WaveletsSpec.hs
test/Data/Wavelets/: ReconstructionSpec.hs  ScalingSpec.hs
