Name:                   wavelets
Version:                0.2.0
Author:                 Scott Murphy<scottmurphy09@gmail.com>
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
category:               Data
homepage:               https://github.com/smurphy8/wavelets
synopsis:               Wavlet Transforms and scaling 
extra-source-files:     changelog.md
description:            

   A Wavelet Transform library, no performance yet but the ability to construct wavelets and then recall them as downsampled versions for creating scaled mutli-resolution pictures. 
-- Synopsis:            NOT THE ORIGINAL AUTHOR!  See Below
-- Description:         http://www.volkerschatz.com/haskell/haswavelet.html   
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src

  extra-libraries:      gsl lapack gslcblas
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Wavelets.Construction
                        Data.Wavelets.Reconstruction
                        Data.Wavelets.Scaling                                
  Other-Modules:        Data.Wavelets.Internal
                        Data.Wavelets
  Build-Depends:        base                     == 4.*
                       ,vector                   >= 0.10.9.1
                       ,hmatrix >= 0.15.2.1
                       ,hstatistics  >= 0.2.5.1                     
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec 
                      , wavelets
                      , vector
                      , hmatrix
                      , hstatistics
                      , statistics

Executable wavelets
    main-is:            Main.hs
    Default-Language:   Haskell2010
    HS-Source-Dirs:     src
    extra-libraries:    gsl lapack gslcblas
    build-depends:      base
                      , wavelets
                                          
    ghc-options:      -threaded -O2 -rtsopts 

Source-Repository head
  Type:                 git
  Location:             https://github.com/smurphy8/wavelets.git


